added external AD auth section; added troubleshooting section; fixed a few old links and xrefs

--- a/doc-Managing_Authentication/miq/index.adoc
+++ b/doc-Managing_Authentication/miq/index.adoc
@@ -29,8 +29,13 @@ include::topics/Amazon_auth.adoc[]
 include::topics/External_auth.adoc[]
 
 :leveloffset: 2
+include::topics/External_AD.adoc[]
+
+:leveloffset: 2
 include::topics/SAML.adoc[]
 
+:leveloffset: 2
+include::topics/External_auth_troubleshooting.adoc[]
 
 
 
