--- a/doc-Managing_Authentication/topics/Authentication_overview.adoc
+++ b/doc-Managing_Authentication/topics/Authentication_overview.adoc
@@ -28,7 +28,7 @@ To change authentication settings:
 * To configure authentication locally using the Virtual Management Database (VMDB), choose *Database*. This is the default method. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#creating_a_user[Creating a User] in _General Configuration_  to create users from {product-title_short}.
 * To configure LDAP-based authentication to use with IdM or Active Directory, choose *LDAP* or *LDAPS*, see xref:ldap_settings[] for configuration steps.
 * To configure Amazon AWS Identity and Access Management (IAM) authentication, choose *Amazon*, see xref:amazon_settings[] for configuration steps.
-* To configure federated authentication to use with IdM or Red Hat Single Sign-On (SSO), choose *External (httpd)* and follow the steps for your authentication method in xref:external_ipa_auth[].
+* To configure federated authentication to use with IdM or Red Hat Single Sign-On (SSO), choose *External (httpd)* and follow the steps for your authentication method in xref:external_auth[].
 
 
 
