updated 4.6 Beta label to 4.6, fixed missing punctuation

--- a/doc-Managing_Authentication/topics/Authentication_overview.adoc
+++ b/doc-Managing_Authentication/topics/Authentication_overview.adoc
@@ -5,7 +5,7 @@
 
 This guide provides instructions to configure authentication management in your {product-title_short} environment as an administrative user.
 
-After completing the setup of an authentication system, users can log in with their credentials
+After completing the setup of an authentication system, users can log in with their credentials.
 
 [NOTE]
 ====
