--- a/doc-Managing_Authentication/topics/External_auth.adoc
+++ b/doc-Managing_Authentication/topics/External_auth.adoc
@@ -125,7 +125,7 @@ Appliance console CLI command and relevant options include:
                            --iparealm <realm_of_idm_server>
                            --ipaprincipal <idm_server_principal>
                            --ipapassword <idm_server_password>
-                           --uninstall-ipa
+                           --uninstall-ipa4.5
 ----
 
 
