--- a/common/service-dialog-creation.adoc
+++ b/common/service-dialog-creation.adoc
@@ -1,4 +1,4 @@
-. Navigate to menu:Automate[Customization].
+. Navigate to menu:Automation[Automate > Customization].
 . Click the *Service Dialogs* accordion.
 . Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a new Dialog*).
 . In *Dialog Information*, enter a *Label* and *Description*. Check the boxes for the buttons you want available at the bottom of the dialog form. The description will appear as hover text.
