--- a/doc-Scripting_Actions/topics/Ansible_method.adoc
+++ b/doc-Scripting_Actions/topics/Ansible_method.adoc
@@ -11,7 +11,7 @@ You must first sync your playbook repositories before using them to create a met
 
 To create a playbook automate method:
 
-. Navigate to menu:Automation[Automate > Explorer]. then click on a domain under *Datastore*.
+. Navigate to menu:Automation[Automate > Explorer], then click on a domain under *Datastore*.
 . Under a namespace, select the class for which you want to create a new method.
 . Click the *Methods* tab.
 . Click image:../images/1847.png[image] (*Configuration*) then,
