--- a/doc-Scripting_Actions/topics/Changing_Priority_Order_of_Domains.adoc
+++ b/doc-Scripting_Actions/topics/Changing_Priority_Order_of_Domains.adoc
@@ -4,7 +4,7 @@
 Functions are executed depending on the order of Domain priority. Use
 this procedure to change the priority order of domains.
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Select the Domains you want to change the priority order for.
 
