--- a/doc-Scripting_Actions/topics/Copying_a_Class_or_Instance.adoc
+++ b/doc-Scripting_Actions/topics/Copying_a_Class_or_Instance.adoc
@@ -1,7 +1,7 @@
 [[copying-a-class-or-instance]]
 === Copying a Class or Instance
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Navigate through the various Domains and Namespaces until you reach the
 desired class or instance to copy.
