--- a/doc-Scripting_Actions/topics/Creating_a_Domain.adoc
+++ b/doc-Scripting_Actions/topics/Creating_a_Domain.adoc
@@ -1,7 +1,7 @@
 [[creating-a-domain]]
 === Creating a Domain
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Click image:../images/1847.png[image] (*Configuration*), then
 image:../images/1862.png[image] (*Add a New Domain*).
