--- a/doc-Scripting_Actions/topics/Deleting_a_Domain.adoc
+++ b/doc-Scripting_Actions/topics/Deleting_a_Domain.adoc
@@ -1,7 +1,7 @@
 [[deleting-a-domain]]
 === Deleting a Domain
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Select the *Domain* that you want to delete.
 
