--- a/doc-Scripting_Actions/topics/Editing_a_Domain.adoc
+++ b/doc-Scripting_Actions/topics/Editing_a_Domain.adoc
@@ -1,7 +1,7 @@
 [[editing-a-domain]]
 === Editing a Domain
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Select the Domain you want to edit.
 
