--- a/doc-Scripting_Actions/topics/Importing_a_Domain.adoc
+++ b/doc-Scripting_Actions/topics/Importing_a_Domain.adoc
@@ -5,7 +5,7 @@
 
 image:import-datastore.png[Import Datastore]
 
-. Navigate to menu:Automate[Import/Export]. 
+. Navigate to menu:Automation[Automate > Import/Export]. 
 . In *Import Datastore via git*, enter the *Git URL*. Select the branch or tag to use.
 . Optionally, enter a *Username* and *Password*. 
 . Click *Submit*.
