--- a/doc-Scripting_Actions/topics/To_create_a_schema_for_a_class1.adoc
+++ b/doc-Scripting_Actions/topics/To_create_a_schema_for_a_class1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to create a schema.
 
-. Navigate to menu:Automate[Explorer], and click the class you want to define a schema for.
+. Navigate to menu:Automation[Automate > Explorer], and click the class you want to define a schema for.
 
 . Click on the *Schema* tab.
 
