--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -7,7 +7,7 @@
 An Ansible Playbook catalog item must exist in order to create an Ansible Playbook custom button. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/provisioning_virtual_machines_and_hosts/catalogs-services#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] in the Provisioning Virtual Machines and Hosts guide.
 ====
 
-. Navigate to menu:Automate[Customization].
+. Navigate to menu:Automation[Automate > Customization].
 
 . Click the *Buttons* accordion.
 
