--- a/doc-Scripting_Actions/topics/To_delete_a_custom_button1.adoc
+++ b/doc-Scripting_Actions/topics/To_delete_a_custom_button1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to delete a custom button.
 
-. Navigate to menu:Automate[Customization], then select the *Buttons* accordion.
+. Navigate to menu:Automation[Automate > Customization], then select the *Buttons* accordion.
 
 . From the *Object Type* tree in the accordion menu, select the type of object you want to remove the button from.
 
