--- a/doc-Scripting_Actions/topics/To_edit_a_field_in_a_schema1.adoc
+++ b/doc-Scripting_Actions/topics/To_edit_a_field_in_a_schema1.adoc
@@ -3,7 +3,7 @@
 
 This procedure describes how to edit schema fields.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 
 . Click the class you want to define a schema for.
 
