--- a/doc-Scripting_Actions/topics/To_reset_the_Datastore_to_the_default1.adoc
+++ b/doc-Scripting_Actions/topics/To_reset_the_Datastore_to_the_default1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how reset datastore to default.
 
-. Navigate to menu:Automate[Import/Export].
+. Navigate to menu:Automation[Automate > Import/Export].
 
 . Export the datastore so that you have a backup.
 
