--- a/doc-Scripting_Actions/topics/expression_method.adoc
+++ b/doc-Scripting_Actions/topics/expression_method.adoc
@@ -7,7 +7,7 @@ Expression methods allow you to use advance search filters as automate methods, 
 
 To create an expression method:
 
-. Navigate to menu:Automation[Automate > Explorer]. then click on a domain under *Datastore*.
+. Navigate to menu:Automation[Automate > Explorer], then click on a domain under *Datastore*.
 . Under a namespace, select the class for which you want to create a new method.
 . Click the *Methods* tab.
 . Click image:../images/1847.png[image] (*Configuration*) then,
