--- a/common/automate-custom-button.adoc
+++ b/common/automate-custom-button.adoc
@@ -1,4 +1,4 @@
-. Navigate to menu:Automate[Customization].
+. Navigate to menu:Automation[Automate > Customization].
 
 . Click the *Buttons* accordion.
 
