--- a/doc-Scripting_Actions/topics/Creating_a_Dynamic_Content_Dialog.adoc
+++ b/doc-Scripting_Actions/topics/Creating_a_Dynamic_Content_Dialog.adoc
@@ -3,7 +3,7 @@
 
 The procedure describes the steps to create a dynamic content dialog.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 
 . From the accordion menu, click menu:DOMAIN[Cloud > VM > Operations > Methods].
 
