--- a/doc-Scripting_Actions/topics/Creating_a_Namespace.adoc
+++ b/doc-Scripting_Actions/topics/Creating_a_Namespace.adoc
@@ -1,7 +1,7 @@
 [[creating-a-namespace]]
 === Creating a Namespace
 
-. Navigate to menu:Automate[Explorer]. The default view is the Datastore.
+. Navigate to menu:Automation[Automate > Explorer]. The default view is the Datastore.
 
 . Navigate through the various Domains and Namespaces until you reach the
 desired location for your new Namespace.
