--- a/doc-Scripting_Actions/topics/To_add_an_instance_to_a_class1.adoc
+++ b/doc-Scripting_Actions/topics/To_add_an_instance_to_a_class1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to create an instance.
 
-. Navigate to menu:Automate[Explorer].
+. Navigate to menu:Automation[Automate > Explorer].
 
 . Click the class you want to define a schema for.
 
