--- a/doc-Scripting_Actions/topics/To_create_a_class1.adoc
+++ b/doc-Scripting_Actions/topics/To_create_a_class1.adoc
@@ -1,7 +1,7 @@
 [[creating-a-class]]
 === Creating a Class
 
-. Navigate to menu:Automate[Explorer], navigate to the namespace you want to add a class to.
+. Navigate to menu:Automation[Automate > Explorer], navigate to the namespace you want to add a class to.
 
 . Click image:../images/1847.png[image] (*Configuration*), then
 image:../images/1862.png[image] (*Add a new Class*).
