--- a/doc-Scripting_Actions/topics/To_create_a_method1.adoc
+++ b/doc-Scripting_Actions/topics/To_create_a_method1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to create a method.
 
-. Navigate to menu:Automate[Explorer], navigate to the class where you want to create a method.
+. Navigate to menu:Automation[Automate > Explorer], navigate to the class where you want to create a method.
 
 . Click the *Methods* tab.
 
