--- a/doc-Scripting_Actions/topics/To_edit_a_custom_button1.adoc
+++ b/doc-Scripting_Actions/topics/To_edit_a_custom_button1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to edit a custom button.
 
-. Navigate to menu:Automate[Customization].
+. Navigate to menu:Automation[Automate > Customization].
 
 . From the *Object Types* dropdown, select the type of object you want to edit the button for.
 
