--- a/doc-Scripting_Actions/topics/To_export_all_Classes_classes1.adoc
+++ b/doc-Scripting_Actions/topics/To_export_all_Classes_classes1.adoc
@@ -3,10 +3,10 @@
 
 This procedure shows you how export datastore classes as an XML file.
 
-. Navigate to menu:Automate[Import/Export].
+. Navigate to menu:Automation[Automate > Import/Export].
 
 . Click image:../images/2371.png[image] (*Export all Datastore classes and instances to a file*).
 
-. Follow your browsers prompts to save the file.
+. Follow your browser's prompts to save the file.
 
 The datastore is exported as a `YAML` file.
