--- a/doc-Scripting_Actions/topics/To_import_Datastore_classes1.adoc
+++ b/doc-Scripting_Actions/topics/To_import_Datastore_classes1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to import datastore classes.
 
-. Navigate to menu:Automate[Import/Export].
+. Navigate to menu:Automation[Automate > Import/Export].
 
 . Export the datastore so that you have a backup.
 
