--- a/doc-Scripting_Actions/topics/To_simulate_an_Automate_Model1.adoc
+++ b/doc-Scripting_Actions/topics/To_simulate_an_Automate_Model1.adoc
@@ -3,7 +3,7 @@
 
 This procedure shows you how to simulate an automate model.
 
-. Navigate to menu:Automate[Simulation].
+. Navigate to menu:Automation[Automate > Simulation].
 
 . In *Object Details*, select a type of object from `/System/Process/` that will initiate the model. The *Message* should be `create`. Type in the name of the *Request* where you are starting from.
 +
