--- a/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
@@ -3,7 +3,7 @@
 
 Under normal circumstances, the deployment process takes approximately 10 minutes. If the deployment is unsuccessful, examining deployment events and pod logs can help identify any issues.
 
-. As a basic user, first retry the failed deployment:
+. As a regular user, first retry the failed deployment:
 +
 ------
 $ oc get pods
@@ -65,7 +65,7 @@ If no longer needed, you can uninstall the {product-title} pod from your project
 Use this procedure if only {product-title} exists in the project.
 ====
 
-. Inside the project, run the following as a basic user:
+. Inside the project, run the following as a regular user:
 +
 ------
 $ oc delete all --all
