--- a/doc-Self_Service_User_Interface_Guide/cfme/master.adoc
+++ b/doc-Self_Service_User_Interface_Guide/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Introduction to the Self Service User Interface
+= Self Service User Interface Guide
 :imagesdir: images
 :vernum: 4.6
 :toc: left
