revised installation procedure; added sections on restore and backup (WIP); deleted uneeded image from another guide; restructured content

--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -23,8 +23,8 @@ include::common/configuration.adoc[]
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
 
-[[Initial_Login]]
-include::common/initial-login.adoc[]
+[[Post-Installation]]
+include::topics/post-installation.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
