--- a/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/miq/index.adoc
@@ -19,11 +19,11 @@ include::topics/installation.adoc[]
 
 include::common/configuration.adoc[]
 
+[[Post-Installation]]
+include::topics/post-installation.adoc[]
+
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
-
-[[Initial_Login]]
-include::common/initial-login.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
